@startuml Game

interface AttackStrategy {
  void attack(Creature attacker, Creature target)
}

class Creature {
  -name: String
  -attackStrategy: AttackStrategy
  +Creature(String name, AttackStrategy attackStrategy)
  +getName(): String
  +setAttackStrategy(AttackStrategy attackStrategy): void
  +attack(Creature target): void
}

class PhysicalAttackStrategy {
  +attack(Creature attacker, Creature target): void
}

class FireAttackStrategy {
  +attack(Creature attacker, Creature target): void
}

class IceAttackStrategy {
  +attack(Creature attacker, Creature target): void
}

class Battle {
  -player: Creature
  -enemy: Creature
  +Battle(Creature player, Creature enemy)
  +start(): void
}

class Game {
  -player: Creature
  -enemy: Creature
  +Game()
  +void start()
  +void selectAttackStrategy(int selection)
}

class PhysicalAttackStrategy implements AttackStrategy
class FireAttackStrategy implements AttackStrategy
class IceAttackStrategy implements AttackStrategy
Creature o-- AttackStrategy
Game o-- Creature
Game o-- Battle
Battle o-- Creature

@enduml
